--- a/src/app/components/petstore/petstore.component.css
+++ b/src/app/components/petstore/petstore.component.css
@@ -49,3 +49,17 @@ li:hover{
     font-size: 15px;
     text-align: justify;
 }
+
+.clase-quitar{
+    display: none;
+}
+
+.btn-presentacion{
+    font-weight: bold;
+    outline: transparent #000000;
+    border-radius: 10px;
+    background-color: #6fcaca;
+    margin-right: 5px;
+    padding: 8px;
+}
+
