--- a/src/app/components/potajes/potajes.component.html
+++ b/src/app/components/potajes/potajes.component.html
@@ -27,9 +27,9 @@
         </div>
 
         <ul class="list-group list-group-flush">
-            <li class="list-group-item" #pavenanas1>Presentación 1:</li>
-            <li class="list-group-item" #pavenanas2>Presentación 2:</li>
-            <li class="list-group-item" #precioavenanas>Precio: </li>
+            <li class="list-group-item fw-bold" #pavenanas1><button type="button" class="btn-presentacion" (click)="presentacionAvenanas(1)">Presentación 1 </button><span class="fw-normal">Pequeñas x 10</span></li>
+            <li class="list-group-item fw-bold" #pavenanas2><button type="button" class="btn-presentacion" (click)="presentacionAvenanas(2)">Presentación 2 </button><span class="fw-normal">Medianas x 8</span></li>
+            <li class="list-group-item fw-bold">Precio: <span class="fw-bold">$</span><span class="fw-normal" #precioavenanas1>6500</span><span class="fw-normal clase-quitar" #precioavenanas2>8500</span></li>
         </ul>
 
         <div class="d-flex flex-row justify-content-center align-items-center">
@@ -49,9 +49,9 @@
         </div>
 
         <ul class="list-group list-group-flush">
-            <li class="list-group-item" #pbanani1>Presentación 1:</li>
-            <li class="list-group-item" #pbanani2>Presentación 2:</li>
-            <li class="list-group-item" #preciobanani>Precio: </li>
+            <li class="list-group-item fw-bold" #pbanani1><button type="button" class="btn-presentacion" (click)="presentacionBanani(1)">Presentación 1 </button><span class="fw-normal">Pequeñas x 10</span></li>
+            <li class="list-group-item fw-bold" #pbanani2><button type="button" class="btn-presentacion" (click)="presentacionBanani(2)">Presentación 2 </button><span class="fw-normal">Medianas x 8</span></li>
+            <li class="list-group-item fw-bold">Precio: <span class="fw-bold">$</span><span class="fw-normal" #preciobanani1>7500</span><span class="fw-normal clase-quitar" #preciobanani2>10500</span></li>
         </ul>
 
         <div class="d-flex flex-row justify-content-center align-items-center">
@@ -71,9 +71,9 @@
         </div>
 
         <ul class="list-group list-group-flush">
-            <li class="list-group-item" #pbrowneta1>Presentación 1:</li>
-            <li class="list-group-item" #pbrowneta2>Presentación 2:</li>
-            <li class="list-group-item" #preciocobrowneta>Precio: </li>
+            <li class="list-group-item fw-bold" #pbrowneta1><button type="button" class="btn-presentacion" (click)="presentacionBrowneta(1)">Presentación 1 </button><span class="fw-normal">Pequeñas x 10</span></li>
+            <li class="list-group-item fw-bold" #pbrowneta2><button type="button" class="btn-presentacion" (click)="presentacionBrowneta(2)">Presentación 2 </button><span class="fw-normal">Medianas x 8</span></li>
+            <li class="list-group-item fw-bold">Precio: <span class="fw-bold">$</span><span class="fw-normal" #preciobrowneta1>8500</span><span class="fw-normal clase-quitar" #preciobrowneta2>12500</span></li>
         </ul>
 
         <div class="d-flex flex-row justify-content-center align-items-center">
@@ -97,9 +97,9 @@
         </div>
 
         <ul class="list-group list-group-flush">
-            <li class="list-group-item" #pcobana1>Presentación 1:</li>
-            <li class="list-group-item" #pcobana2>Presentación 2:</li>
-            <li class="list-group-item" #preciocobana>Precio: </li>
+            <li class="list-group-item fw-bold" #pcobana1><button type="button" class="btn-presentacion" (click)="presentacionCobana(1)">Presentación 1</button><span class="fw-normal">Pequeñas x 10</span></li>
+            <li class="list-group-item fw-bold" #pcobana2><button type="button" class="btn-presentacion" (click)="presentacionCobana(2)">Presentación 2</button><span class="fw-normal">Medianas x 8</span></li>
+            <li class="list-group-item fw-bold">Precio: <span class="fw-bold">$</span><span class="fw-normal" #preciocobana1>14000</span><span class="fw-normal clase-quitar" #preciocobana2>23500</span></li>
         </ul>
 
         <div class="d-flex flex-row justify-content-center align-items-center">
@@ -119,9 +119,9 @@
         </div>
 
         <ul class="list-group list-group-flush">
-            <li class="list-group-item" #pmiel1>Presentación 1:</li>
-            <li class="list-group-item" #pmiel2>Presentación 2:</li>
-            <li class="list-group-item" #preciomiel>Precio: </li>
+            <li class="list-group-item fw-bold" #pmiel1><button type="button" class="btn-presentacion" (click)="presentacionMiel(1)">Presentación 1 </button><span class="fw-normal">Pequeñas x 10</span></li>
+            <li class="list-group-item fw-bold" #pmiel2><button type="button" class="btn-presentacion" (click)="presentacionMiel(2)">Presentación 2 </button><span class="fw-normal">Medianas x 8</span></li>
+            <li class="list-group-item fw-bold">Precio: <span class="fw-bold">$</span><span class="fw-normal" #preciomiel1>9000</span><span class="fw-normal clase-quitar" #preciomiel2>14000</span></li>
         </ul>
 
         <div class="d-flex flex-row justify-content-center align-items-center">
@@ -141,9 +141,9 @@
         </div>
 
         <ul class="list-group list-group-flush">
-            <li class="list-group-item" #pvainilla1>Presentación 1:</li>
-            <li class="list-group-item" #pvainilla2>Presentación 2:</li>
-            <li class="list-group-item" #preciovainilla>Precio: </li>
+            <li class="list-group-item fw-bold" #pvainilla1><button type="button" class="btn-presentacion" (click)="presentacionVainilla(1)">Presentación 1 </button><span class="fw-normal">Pequeñas x 10</span></li>
+            <li class="list-group-item fw-bold" #pvainilla2><button type="button" class="btn-presentacion" (click)="presentacionVainilla(2)">Presentación 2 </button><span class="fw-normal">Medianas x 8</span></li>
+            <li class="list-group-item fw-bold">Precio: <span class="fw-bold">$</span><span class="fw-normal" #preciovainilla1>8500</span><span class="fw-normal clase-quitar" #preciovainilla2>12500</span></li>
         </ul>
 
         <div class="d-flex flex-row justify-content-center align-items-center">
@@ -166,19 +166,19 @@
 
         <img src="" class="card-img-top" alt="Avenanos" #imagenavenanos>
         <div class="card-body">
-            <h5 class="card-title">Avenanos</h5>
+            <h5 class="card-title" #avenanos>Avenanos</h5>
             <p class="card-text">Bocaditos de avena, banano, miel y chía</p>
         </div>
 
         <ul class="list-group list-group-flush">
-            <li class="list-group-item" #pavenanos1>Presentación:</li>
-            <li class="list-group-item" #precioavenanos>Precio: </li>
+            <li class="list-group-item fw-bold"><button type="button" class="btn-presentacion">Presentación </button><span class="fw-normal" #pavenanos> x 10</span></li>
+            <li class="list-group-item fw-bold">Precio: $<span class="fw-normal" #precioavenanos>11000</span></li>
         </ul>
 
         <div class="d-flex flex-row justify-content-center align-items-center">
             <ul class="list-group list-group-horizontal">
-                <li class="list-group-item"><i class="fas fa-minus fa-lg"></i></li>
-                <li class="list-group-item"><i class="fas fa-plus fa-lg"></i></li>
+                <li class="list-group-item" (click)="bocaditosStorage(1)"><i class="fas fa-minus fa-lg"></i></li>
+                <li class="list-group-item" (click)="bocaditosStorage(2)"><i class="fas fa-plus fa-lg"></i></li>
             </ul>
         </div>
     </div>
@@ -187,19 +187,19 @@
 
         <img src="" class="card-img-top" alt="Imagen cacao" #imagencacao>
         <div class="card-body">
-            <h5 class="card-title">Cacao</h5>
+            <h5 class="card-title" #cacao>Cacao</h5>
             <p class="card-text">Bocaditos de cacao, uvas pasas y maní</p>
         </div>
 
         <ul class="list-group list-group-flush">
-            <li class="list-group-item" #pcacao1>Presentación:</li>
-            <li class="list-group-item" #preciocacao>Precio: </li>
+            <li class="list-group-item fw-bold"><button type="button" class="btn-presentacion">Presentación </button><span class="fw-normal" #pcacao> x 10</span></li>
+            <li class="list-group-item fw-bold">Precio: $<span class="fw-normal" #preciocacao>10500</span></li>
         </ul>
 
         <div class="d-flex flex-row justify-content-center align-items-center">
             <ul class="list-group list-group-horizontal">
-                <li class="list-group-item"><i class="fas fa-minus fa-lg"></i></li>
-                <li class="list-group-item"><i class="fas fa-plus fa-lg"></i></li>
+                <li class="list-group-item" (click)="bocaditosStorage(3)"><i class="fas fa-minus fa-lg"></i></li>
+                <li class="list-group-item" (click)="bocaditosStorage(4)"><i class="fas fa-plus fa-lg"></i></li>
             </ul>
         </div>
     </div>
@@ -208,19 +208,19 @@
 
         <img src="" class="card-img-top" alt="Imagen maniel" #imagenmaniel>
         <div class="card-body">
-            <h5 class="card-title">Maniel</h5>
+            <h5 class="card-title" #maniel>Maniel</h5>
             <p class="card-text">Bocaditos de miel, mantequilla de maní y harina de avena</p>
         </div>
 
         <ul class="list-group list-group-flush">
-            <li class="list-group-item" #pmaniel1>Presentación:</li>
-            <li class="list-group-item" #preciomaniel>Precio: </li>
+            <li class="list-group-item fw-bold"><button type="button" class="btn-presentacion">Presentación </button><span class="fw-normal" #pmaniel> x 10</span></li>
+            <li class="list-group-item fw-bold">Precio: $<span class="fw-normal" #preciomaniel>11000</span></li>
         </ul>
 
         <div class="d-flex flex-row justify-content-center align-items-center">
             <ul class="list-group list-group-horizontal">
-                <li class="list-group-item"><i class="fas fa-minus fa-lg"></i></li>
-                <li class="list-group-item"><i class="fas fa-plus fa-lg"></i></li>
+                <li class="list-group-item" (click)="bocaditosStorage(5)"><i class="fas fa-minus fa-lg"></i></li>
+                <li class="list-group-item" (click)="bocaditosStorage(6)"><i class="fas fa-plus fa-lg"></i></li>
             </ul>
         </div>
     </div>
@@ -242,9 +242,9 @@
         </div>
 
         <ul class="list-group list-group-flush">
-            <li class="list-group-item" #pgranola1>Presentación 1:</li>
-            <li class="list-group-item" #pgranola2>Presentación 2:</li>
-            <li class="list-group-item" #preciogranola>Precio: </li>
+            <li class="list-group-item fw-bold" #pgranola1><button type="button" class="btn-presentacion" (click)="presentacionGranola(1)">Presentación 1</button><span class="fw-normal"> 250gr</span></li>
+            <li class="list-group-item fw-bold" #pgranola2><button type="button" class="btn-presentacion" (click)="presentacionGranola(2)">Presentación 2</button><span class="fw-normal"> 500gr</span></li>
+            <li class="list-group-item fw-bold">Precio: $<span class="fw-normal" #preciogranola1>12000</span><span class="fw-normal clase-quitar" #preciogranola2>20500</span></li>
         </ul>
 
         <div class="d-flex flex-row justify-content-center align-items-center">
@@ -267,8 +267,8 @@
         </div>
 
         <ul class="list-group list-group-flush">
-            <li class="list-group-item" #pchocobarra>Presentación:</li>
-            <li class="list-group-item" #preciochocobarra>Precio: </li>
+            <li class="list-group-item fw-bold" #pchocobarra><button type="button" class="btn-presentacion">Presentación</button><span class="fw-normal"> x4</span></li>
+            <li class="list-group-item fw-bold">Precio: $<span class="fw-normal" #preciochocobarra>9500</span></li>
         </ul>
 
         <div class="d-flex flex-row justify-content-center align-items-center">
@@ -288,8 +288,8 @@
         </div>
 
         <ul class="list-group list-group-flush">
-            <li class="list-group-item" #pcompleta>Presentación:</li>
-            <li class="list-group-item" #preciocompleta>Precio: </li>
+            <li class="list-group-item fw-bold" #pcompleta><button type="button" class="btn-presentacion">Presentación</button><span class="fw-normal"> x4</span></li>
+            <li class="list-group-item fw-bold">Precio: $<span class="fw-normal" #preciocompleta>9500</span></li>
         </ul>
 
         <div class="d-flex flex-row justify-content-center align-items-center">
@@ -309,8 +309,8 @@
         </div>
 
         <ul class="list-group list-group-flush">
-            <li class="list-group-item" #ptriplea>Presentación:</li>
-            <li class="list-group-item" #preciotriplea>Precio: </li>
+            <li class="list-group-item fw-bold" #ptriplea><button type="button" class="btn-presentacion">Presentación </button> <span class="fw-normal"> x4</span></li>
+            <li class="list-group-item fw-bold" #preciotriplea>Precio: $<span class="fw-normal" #preciotriplea>9500</span></li>
         </ul>
 
         <div class="d-flex flex-row justify-content-center align-items-center">
@@ -338,9 +338,9 @@
         </div>
 
         <ul class="list-group list-group-flush">
-            <li class="list-group-item" #puntables1 (click)=presentacionmantequilla(1)>Presentación 1:</li>
-            <li class="list-group-item" #puntables2 (click)=presentacionmantequilla(2)>Presentación 2:</li>
-            <li class="list-group-item" #preciountables>Precio: </li>
+            <li class="list-group-item fw-bold" #puntables1><button type="button" class="btn-presentacion" (click)=presentacionMantequilla(1)>Presentación 1</button><span class="fw-normal"> 28gr</span></li>
+            <li class="list-group-item fw-bold" #puntables2><button type="button" class="btn-presentacion" (click)=presentacionMantequilla(2)>Presentación 2</button><span class="fw-normal"> 200gr</span></li>
+            <li class="list-group-item fw-bold">Precio: $<span class="fw-normal" #preciountables1>4500</span><span class="fw-normal clase-quitar" #preciountables2>10500</span></li>
         </ul>
 
         <div class="d-flex flex-row justify-content-center align-items-center">
@@ -367,7 +367,7 @@
         </div>
 
         <ul class="list-group list-group-flush">
-            <li class="list-group-item" #preciootros1>Precio: </li>
+            <li class="list-group-item fw-bold">Precio: $<span class="fw-normal" #preciootros1>65500</span></li>
         </ul>
 
         <div class="d-flex flex-row justify-content-center align-items-center">
@@ -387,7 +387,7 @@
         </div>
 
         <ul class="list-group list-group-flush">
-            <li class="list-group-item" #preciootros2>Precio: </li>
+            <li class="list-group-item fw-bold">Precio: $<span class="fw-normal" #preciootros2>55000</span></li>
         </ul>
 
         <div class="d-flex flex-row justify-content-center align-items-center">
@@ -407,9 +407,9 @@
         </div>
 
         <ul class="list-group list-group-flush">
-            <li class="list-group-item" #pchocodiscos1>Presentación 1:</li>
-            <li class="list-group-item" #pchocodiscos2>Presentación 2:</li>
-            <li class="list-group-item" #preciochocodiscos>Precio: </li>
+            <li class="list-group-item fw-bold" #pchocodiscos1><button type="button" class="btn-presentacion" (click)="presentacionOtros(1)">Presentación 1</button><span class="fw-normal"> x5</span></li>
+            <li class="list-group-item fw-bold" #pchocodiscos2><button type="button" class="btn-presentacion" (click)="presentacionOtros(2)">Presentación 2</button><span class="fw-normal"> x10</span></li>
+            <li class="list-group-item fw-bold">Precio: $<span class="fw-normal" #preciochocodiscos1>7500</span><span class="fw-normal clase-quitar" #preciochocodiscos2>12000</span></li>
         </ul>
 
         <div class="d-flex flex-row justify-content-center align-items-center">
